--- a/ClubSoft/Views/Home/Inicio.cshtml
+++ b/ClubSoft/Views/Home/Inicio.cshtml
@@ -68,5 +68,25 @@
           </div>
         </div>
       </div>
+      <div class="col-md-3 mb-4 col-sm-12">
+        <div class="card custom-card d-flex align-items-center">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-3 text-center">
+                <i class="fas fa-calendar-days fa-3x mb-3"></i>
+              </div>
+              <div class="col-9">
+                <h5 class="titulo-card">Eventos</h5>
+                <p class="subtitulo-card">Gestionar eventos.</p>
+              </div>
+              <div class="text-end w-100">
+                <a class="btn btn-primary" asp-controller="Eventos" asp-action="Index">
+                  <i class="fas fa-arrow-right ml-2"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
