edicion vista home

--- a/ClubSoft/Views/Home/Index.cshtml
+++ b/ClubSoft/Views/Home/Index.cshtml
@@ -101,21 +101,7 @@
           <div class="row">
             <div class="col-md-6 col-sm-12 marginform pe-5 ps-5">
             <h1 class="titulossecciones">¡CONTACTANOS!</h1>
-              <form action="">           
-                <div class="form-group padform pt-2">
-                  <input type="text" id="Nombre" class="form-control bg-opacity-25 bg-light" placeholder="Nombre">
-                </div>
-                <div class="form-group padform">
-                  <input type="text" id="Email" class="form-control bg-opacity-25 bg-light" placeholder="Email">
-                </div>
-                <div class="form-group padform">
-                  <input type="text" id="Motivo" class="form-control bg-opacity-25 bg-light" placeholder="Motivo de contacto">
-                </div>
-                <div class="form-group padform">
-                <textarea name="" id="Mensaje" cols="20" rows="9" placeholder="Mensaje" class="form-control bg-opacity-25 bg-light"></textarea>
-                </div>
-                <input type="submit" class="btn btn-primary btn-lg" value="Enviar información" id="Enviar">
-              </form>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13718.0919737343!2d-62.010790741833496!3d-30.7318076999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9435031514f117bb%3A0xd34bfbaaf4e0430c!2sColegio%20Ezpeleta!5e0!3m2!1ses-419!2sar!4v1722533661536!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-md-6 col-sm-12 fuentecards p-5">
               <div>
