--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Personas" asp-action="Index">Personas</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="TipoEventos" asp-action="Index">Tipo de Eventos</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Eventos" asp-action="Index">Eventos</a>
+                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="TipoProductos" asp-action="Index">Tipo de Productos</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
         </div>
