validaciones vista provincias y localidades

--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -13,6 +13,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control" id="ProvinciaNombre" style="text-transform:uppercase"
           placeholder="Ingrese la provincia">
+        <span id="errorMensaje" style="color:red; display:none; font-size: 15px; padding-left: 4px;">Debe ingresar una provincia</span>
       </div>
       <div class="col-md-3">
         <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
