--- a/ClubSoft/Views/TipoProductos/Index.cshtml
+++ b/ClubSoft/Views/TipoProductos/Index.cshtml
@@ -4,11 +4,11 @@
 
 <div class="p-3">
   <div class="row">
-      <h4>Agregar Nuevo Producto<i class="ms-2 fa-solid fa-square-plus"></i></h4>
+      <h4>Agregar Nuevo Tipo de Producto<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <input type="hidden" id="TipoProductoID" value="0" />
       <div class="col-md-3">
         <input type="text" class="form-control" id="TipoProductoNombre" style="text-transform:uppercase"
-          placeholder="Ingrese nombre del producto">
+          placeholder="Nombre del tipo de producto">
       </div>
       <div class="col-md-3">
         <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
