--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -1,10 +1,7 @@
 @{
     ViewData["Title"] = "Provincias";
 }
-
-@* <div class="text-center">
-  <h1 class="display-4">Provincias</h1>
-</div> *@
+<link rel="stylesheet" href="~/css/Provincias.css" asp-append-version="true" />
 
 <div class="p-3">
   <div class="row">
@@ -13,7 +10,9 @@
       <div class="col-md-3">
         <input type="text" class="form-control" id="ProvinciaNombre" style="text-transform:uppercase"
           placeholder="Ingrese la provincia">
-        <span id="errorMensaje" style="color:red; display:none; font-size: 15px; padding-left: 4px;">Debe ingresar una provincia</span>
+        <span id="errorMensaje" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+          <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una provincia
+          </span>
       </div>
       <div class="col-md-3">
         <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
